cmake_minimum_required(VERSION 3.0)
project(IVizFinal CXX)

add_definitions(-Wall -D DEBUG_MODE)

add_library(projplugin SHARED main.cpp)
find_package(DynamoRIO)
if(NOT DynamoRIO_FOUND)
        message(FATAL_ERROR "DynamoRIO package required to build")
endif(NOT DynamoRIO_FOUND)
configure_DynamoRIO_client(projplugin)
use_DynamoRIO_extension(projplugin drmgr)
use_DynamoRIO_extension(projplugin drreg)
use_DynamoRIO_extension(projplugin drutil)
use_DynamoRIO_extension(projplugin drx)
